force-app/main/default/objects/cpm__Targets__c/cpm__Targets__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Targets</label>
</CustomObject>