force-app/main/default/objects/cpm__Targets__c/fields/cpm__Bank_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>cpm__Bank_Account_Id__c</fullName>
    <label>Bank Account Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>