force-app/main/default/objects/cpm__Targets__c/fields/cpm__Config__c.field-meta.xml
<CustomField>
    <fullName>cpm__Config__c</fullName>
    <description>Can be used by anyone who whats to give some additional config to a target</description>
    <label>Config</label>
    <length>255</length>
    <type>Text</type>
</CustomField>