force-app/main/default/objects/cpm__Targets__c/fields/cpm__Global_Target__c.field-meta.xml
<CustomField>
    <fullName>cpm__Global_Target__c</fullName>
    <label>Global Target</label>
    <length>255</length>
    <type>Text</type>
</CustomField>