force-app/main/default/objects/cpm__Targets__c/fields/cpm__Name__c.field-meta.xml
<CustomField>
    <fullName>cpm__Name__c</fullName>
    <label>Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>