force-app/main/default/objects/cpm__Targets__c/fields/cpm__Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>cpm__Sub_Type__c</fullName>
    <label>Sub Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>